<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:src="@drawable/mcti" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/txtHeaderLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textHeader2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHeader2"
                    style="@style/Italic"
                    android:textSize="@dimen/text_head_size_small" />

                <TextView
                    android:id="@+id/textHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/txtHeader3"
                    style="@style/Bold"
                    android:textSize="@dimen/text_head_size_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/txtHeaderLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textHeader4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHeader4"
                    style="@style/Italic"
                    android:textSize="@dimen/text_head_size_small" />

                <TextView
                    android:id="@+id/textHeader5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/txtHeader5"
                    style="@style/Bold"
                    android:textSize="@dimen/text_head_size_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/txtHeaderLine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textHeader6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHeader6"
                    style="@style/Italic"
                    android:textSize="@dimen/text_head_size_small" />

                <TextView
                    android:id="@+id/textHeader7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/txtHeader7"
                    style="@style/Bold"
                    android:textSize="@dimen/text_head_size_small" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:hint="@string/txtNameHint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10sp"
        android:text="@string/txtName"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editClass"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50sp"
                android:layout_weight="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:hint="@string/txtClassHint" />

            <EditText
                android:id="@+id/editNote"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="Digite a Nota" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5sp"
                android:layout_marginEnd="16sp"
                android:layout_weight="1"
                android:text="@string/txtClass"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5sp"
                android:layout_weight="1"
                android:text="@string/txtNote"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddNote"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/txtButtonAdd" />

        <Button
            android:id="@+id/buttonConsult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/txtButtonConsult" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessage"
        style="@style/ItalicBold"
        android:layout_marginTop="-15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/txtMessage" />
    <ListView
        android:id="@+id/listViewNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
